--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background: url('file:///C:/Users/theba/Downloads/photo-1444080748397-f442aa95c3e5%20(1).jpg') no-repeat center center fixed;
+            background: url('https://images.unsplash.com/photo-1444080748397-f442aa95c3e5?q=80&w=1032&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center center fixed;
             background-size: cover;
             margin: 0;
             padding: 0;
